# clicky

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CI_CD_IMPROVEMENTS.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  quality-gates.yml
docs/: README.adoc  TUI_IMPLEMENTATION.md  TUI_QUICK_REFERENCE.md
docs/arc42/: 01-introduction.adoc  02-architecture-constraints.adoc  03-context.adoc  04-solution-strategy.adoc  05-building-block-view.adoc  06-runtime-view.adoc  07-deployment-view.adoc  08-concepts.adoc  index.adoc
docs/developer/: architecture.adoc  contributing.adoc  quality-gates.adoc  testing.adoc
docs/diagrams/: README.md  ci-architecture.puml  quality-gates.puml  tui-create-delete.puml
docs/user-guide/: cli-reference.adoc  installation.adoc  interactive-mode.adoc  quickstart.adoc
src/: main.rs
src/application/: board_service.rs  board_service_tests.rs  card_service.rs  card_service_tests.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/cli/interactive/: create_prompt.rs  delete_prompt.rs  init_prompt.rs  list_prompt.rs  mod.rs  move_prompt.rs  show_prompt.rs  update_prompt.rs  utils.rs
src/cli/tui/: app.rs  app_tests.rs  events.rs  events_tests.rs  mod.rs  state.rs  ui.rs
src/cli/tui/components/: board_view.rs  card_detail.rs  mod.rs
src/domain/: board.rs  board_tests.rs  card.rs  card_tests.rs  column.rs  column_tests.rs  mod.rs
src/infrastructure/: mod.rs  storage.rs  storage_tests.rs
